--- a/index.html
+++ b/index.html
@@ -9,3 +9,15 @@ title: Home
 <p>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer pretium ligula libero, sagittis condimentum ante aliquet aliquet. Ut non libero risus. Vestibulum sed leo elementum, semper est ut, tincidunt urna. Nullam porta lectus quis dictum eleifend. Ut lacinia eget ligula at lobortis. Praesent ac mi sed massa dapibus efficitur sed nec mi. Etiam nibh nisi, laoreet ac finibus id, volutpat vitae turpis. In posuere posuere risus, eget finibus libero cursus ac. Nullam ut libero fringilla, maximus ante et, condimentum leo. Nam cursus iaculis orci, ac pharetra tortor venenatis id.
 </p>
+
+{% if jekyll.environment == "development" %}
+  <p class="text-center">This is development</p>
+{% endif %}
+
+{% if jekyll.environment == "production" %}
+  <!--
+    Add this environment variable in netlify for this to work:
+    JEKYLL_ENV  production
+  -->
+  <p class="text-center">This is production</p>
+{% endif %}
