--- a/index.html
+++ b/index.html
@@ -11,13 +11,11 @@ title: Home
 </p>
 
 {% if jekyll.environment == "development" %}
-  <p class="text-center">This is development</p>
-{% endif %}
-
-{% if jekyll.environment == "production" %}
+  <p class="text-center">Development environment</p>
+{% else if jekyll.environment == "production" %}
   <!--
     Add this environment variable in netlify for this to work:
     JEKYLL_ENV  production
   -->
-  <p class="text-center">This is production</p>
+  <p class="text-center">Production environment</p>
 {% endif %}
